# nvchecker

./: .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  NEW  README.rst  get_version.py  graphql.output.json  graphql.variable.examples.py  graphqlquery.txt  keyfile.toml.enc  mypy.ini  nvchecker  pyproject.toml  sample_config.ini  sample_config.toml  sample_source.ini  sample_source.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  codeql.yml  mypy.yaml  tests.yaml
configurations/: arch_lilydjwg.ini
docs/: Makefile  api.rst  conf.py  index.rst  myrst2man.py  plugin.rst  requirements.txt  usage.rst
lib/: notify.py
nvchecker/: __init__.py  __main__.py  api.py  config.py  core.py  ctxvars.py  get_version.py  main.py  slogconf.py  sortversion.py  tools.py  util.py
nvchecker-old/: get_version.py
nvchecker-old/source/: android_sdk.py  anitya.py  cpan.py  gems.py  gitlab.py  hackage.py  manual.py  npm.py  packagist.py  repology.py  vcs.py  vcs.sh
nvchecker/httpclient/: __init__.py  aiohttp_httpclient.py  base.py  (+3 more)
nvchecker_source/: 1.patch  alpm.py  alpmfiles.py  android_sdk.py  anitya.py  apt.py  archpkg.py  aur.py  bitbucket.py  cmd.py  combiner.py  container.py  cpan.py  cran.py  cratesio.py  debianpkg.py  gems.py  git.py  git_dulwich.py  git_pygit2.py  gitea.py  github-graphql.py  github-test.py  github.py  github_testfile.toml  gitlab.py  go.py  hackage.py  htmlparser.py  httpheader.py  jq.py  launchpad.py  manual.py  maven.py  mercurial.py  none.py  npm.py  opam.py  openvsx.py  packagist.py  (+11 more)
scripts/: README.rst  arch_repopkg_unmonitored  gen_contents  maintained_in_aur  nvchecker-ini2toml  nvchecker-notify  nvtake.bash_completion  run_cached_tests
sources/: arch_aur.ini  arch_cn.ini  arch_lilydjwg.ini  sample_source.ini
tests/: conftest.py  helper.py  test_alpm.py  test_alpmfiles.py  test_android.py  test_android_sdk.py  test_anitya.py  test_apt.py  test_archpkg.py  test_aur.py  test_bitbucket.py  test_cache.py  test_cmd.py  test_combiner.py  test_container.py  test_cpan.py  test_cran.py  test_cratesio.py  test_debianpkg.py  test_gems.py  test_git.py  test_git_dulwich.py  test_git_pygit2.py  test_gitcafe.py  test_gitea.py  test_github.py  test_gitlab.py  test_gitlab_local.py  test_go.py  test_hackage.py  test_htmlparser.py  test_htmlpasrer.py  test_httpheader.py  test_jq.py  test_keyfile.py  test_launchpad.py  test_manual.py  test_maven.py  test_mercurial.py  test_npm.py  (+18 more)
tests-old/: test_anitya.py  test_bitbucket.py  test_gitea.py  test_hackage.py  test_keyfile.py  test_manual.py  test_pypi.py  test_regex.py  test_repology.py  test_sparkle.py  test_ubuntupkg.py
(+41 files in other folders)
