# The complex upload command:
# rm -rf dist && python -m build --sdist && twine check dist/* && twine upload -s dist/*

[metadata]
name = nvchecker
version = attr: nvchecker.__version__
author = lilydjwg
author_email = lilydjwg@gmail.com
description = New version checker for software
license = MIT
keywords = new, version, build, check
url = https://github.com/lilydjwg/nvchecker
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any

classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development
  Topic :: System :: Archiving :: Packaging
  Topic :: System :: Software Distribution
  Topic :: Utilities

[options]
zip_safe = True

packages = find_namespace:
install_requires =
  setuptools; python_version<"3.8"
  tomli
  structlog
  platformdirs
  tornado>=6
  pycurl
scripts =
  scripts/nvchecker-ini2toml
  scripts/nvchecker-notify

[options.packages.find]
exclude = tests, build*, docs*

[options.extras_require]
vercmp =
  pyalpm
awesomeversion =
  awesomeversion
pypi =
  packaging
htmlparser =
  lxml

[options.entry_points]
console_scripts =
  nvchecker = nvchecker.__main__:main
  nvtake = nvchecker.tools:take
  nvcmp = nvchecker.tools:cmp

[flake8]
ignore = E111, E302, E501
